[gd_scene load_steps=10 format=3 uid="uid://cbcf06btbqo36"]

[ext_resource type="Script" uid="uid://ds0jx5npmd217" path="res://Windows/SlotsGambling/gambling_main.gd" id="1_15ixx"]
[ext_resource type="PackedScene" uid="uid://brlbtg7sujs5j" path="res://Windows/SlotsGambling/symbol_squares.tscn" id="2_bc2yg"]
[ext_resource type="AudioStream" uid="uid://cupxbblpglkww" path="res://Windows/SlotsGambling/GamblingAudio/GamblingBGMusic(No_Copyright_Pixabay).mp3" id="3_uwnka"]
[ext_resource type="AudioStream" uid="uid://dnyxbbpchnb8g" path="res://Windows/SlotsGambling/GamblingAudio/gamblecore.ogg" id="4_encln"]
[ext_resource type="AudioStream" uid="uid://bj770iuyjcxgs" path="res://Windows/SlotsGambling/GamblingAudio/win.ogg" id="5_3any0"]
[ext_resource type="AudioStream" uid="uid://mo4glqyfjle8" path="res://Windows/SlotsGambling/GamblingAudio/lose.ogg" id="6_jop6i"]
[ext_resource type="AudioStream" uid="uid://cy2e33to2gwyg" path="res://Windows/SlotsGambling/GamblingAudio/slotRolls.ogg" id="7_1ri76"]

[sub_resource type="Gradient" id="Gradient_cjf61"]
colors = PackedColorArray(0.69803923, 0.69803923, 1, 1, 0.69803923, 0.69803923, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ug6yu"]
gradient = SubResource("Gradient_cjf61")

[node name="Slotsgambling" type="Window"]
oversampling_override = 1.0
position = Vector2i(0, 36)
size = Vector2i(800, 600)

[node name="Container" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("GradientTexture1D_ug6yu")

[node name="gambling main" type="Node2D" parent="Container" node_paths=PackedStringArray("slot1", "slot2", "slot3")]
script = ExtResource("1_15ixx")
slot1 = NodePath("symbolSquares")
slot2 = NodePath("symbolSquares2")
slot3 = NodePath("symbolSquares3")

[node name="symbolSquares" parent="Container/gambling main" instance=ExtResource("2_bc2yg")]
position = Vector2(200, 300)

[node name="symbolSquares2" parent="Container/gambling main" instance=ExtResource("2_bc2yg")]
position = Vector2(400, 300)

[node name="symbolSquares3" parent="Container/gambling main" instance=ExtResource("2_bc2yg")]
position = Vector2(600, 300)

[node name="Timer" type="Timer" parent="Container/gambling main"]
one_shot = true

[node name="gamblingBGMusic" type="AudioStreamPlayer" parent="Container/gambling main"]
stream = ExtResource("3_uwnka")
volume_db = -30.0
autoplay = true

[node name="beginGambling" type="AudioStreamPlayer" parent="Container/gambling main"]
stream = ExtResource("4_encln")
volume_db = -30.0
autoplay = true

[node name="winSFX" type="AudioStreamPlayer" parent="Container/gambling main"]
stream = ExtResource("5_3any0")
volume_db = -30.0

[node name="loseSFX" type="AudioStreamPlayer" parent="Container/gambling main"]
stream = ExtResource("6_jop6i")
volume_db = -30.0

[node name="slotRollSFX" type="AudioStreamPlayer" parent="Container/gambling main"]
stream = ExtResource("7_1ri76")
volume_db = -30.0
parameters/looping = true

[node name="Label" type="Label" parent="Container/gambling main"]
offset_left = 260.0
offset_top = 100.0
offset_right = 537.0005
offset_bottom = 169.00005
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Credits: 50"

[node name="TenPercent" type="Button" parent="Container/gambling main"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 110.0
offset_top = 455.0
offset_right = 289.001
offset_bottom = 491.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Bet 10%: 5 Creds"

[node name="FiftyPercent" type="Button" parent="Container/gambling main"]
offset_left = 310.0
offset_top = 455.0
offset_right = 489.0
offset_bottom = 491.0
theme_override_font_sizes/font_size = 20
text = "Bet 50%: 25 Creds"

[node name="HundredPercent" type="Button" parent="Container/gambling main"]
offset_left = 510.0
offset_top = 455.0
offset_right = 689.0
offset_bottom = 491.0
theme_override_font_sizes/font_size = 20
text = "Bet 100%: 50 Creds"

[node name="CashOut" type="Button" parent="Container/gambling main"]
offset_left = 310.0
offset_top = 530.0
offset_right = 489.0
offset_bottom = 566.0002
theme_override_font_sizes/font_size = 20
text = "Cash Out"

[connection signal="timeout" from="Container/gambling main/Timer" to="Container/gambling main" method="_on_timer_timeout"]
[connection signal="pressed" from="Container/gambling main/TenPercent" to="Container/gambling main" method="_on_button_pressed"]
[connection signal="pressed" from="Container/gambling main/FiftyPercent" to="Container/gambling main" method="_on_fifty_percent_pressed"]
[connection signal="pressed" from="Container/gambling main/HundredPercent" to="Container/gambling main" method="_on_hundred_percent_pressed"]
[connection signal="pressed" from="Container/gambling main/CashOut" to="Container/gambling main" method="_on_cash_out_pressed"]
